--- a/houdJam.uproject
+++ b/houdJam.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "SoundVisualizations",
 			"Enabled": true
+		},
+		{
+			"Name": "HoudiniNiagara",
+			"Enabled": true
 		}
 	]
 }
